infrastructure/03-traefik/foreign/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
spec:
  type: ExternalName
  externalName: 192.168.178.2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
