infrastructure/03-traefik/foreign/adguard/adguard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-ingress
  namespace: traefik
spec:
  entryPoints:
    - web-local
    - websecure-local
  routes:
  - match: Host(`adguard.steffenillium.de`)
    kind: Rule
    services:
    - name: adguard-service
      port: http
