infrastructure/03-traefik/foreign/adguard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-ingress
  namespace: traefik
spec:
  entryPoints:
    - websecure-local
  tls: {}
  routes:
  - match: Host(`adguard.steffenillium.de`) || Host(`dns.steffenillium.de`)
    kind: Rule
    services:
    - name: adguard-service
      port: http
